Fix hot flag overflow + display 2 lines when title overflowing + fix partial quote button overflow + fix theme scroll when cookie modal is hidden

--- a/deboucled.css
+++ b/deboucled.css
@@ -481,6 +481,10 @@ blockquote .deboucled-highlighted {
   width: 100%;
   position: relative;
   margin-left: 0.4rem !important;
+  white-space: normal;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box !important;
 }
 .topic-list .message .topic-title {
   position: static;
@@ -489,6 +493,9 @@ blockquote .deboucled-highlighted {
   position: relative !important;
   left: 0 !important;
   top: 0 !important;
+}
+.bloc-message-forum .conteneur-message {
+  overflow: visible;
 }
 
 /* Floating navbar */
